Fix some resizing issues.
* Bug fix:  If you resize the window the canvas now resizes with it.
* Bug fix:  The controls at the bottom are always visible now.
* New bug / TODO:  The camera position is not right if the window is too narrow.

--- a/src/style.css
+++ b/src/style.css
@@ -14,15 +14,30 @@ body {
   width: 100vw;
 }
 
-#canvas {
+#canvasHolder {
   flex-grow: 1;
+  flex-shrink: 1;
+  overflow: hidden;
 
+  display: flex;
+  align-items: stretch;
   /*
   outline-style: dotted;
   outline-width: 3px;
   outline-color: blue;
   outline-offset: -0.5em;
   */
+}
+
+/* It seems like this should say flex-shrink:1.  
+ * That allocates the right amount of space.
+ * But a <canvas> or an <img> will ignore that.
+ * It will try to maintain the right aspect ratio.
+ * Depending on other details it will leave blank space or it will try to draw past the allocate space.
+ * flex-grow:1 works perfectly but sometime flex-shrink does not. */
+#canvas {
+  flex-grow: 1;
+  width:0;
 }
 
 #nudgeControls {
